<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btn_move_activity"
            android:text="@string/move_activity"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btn_move_activity_data"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/move_activity_data"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btn_move_activity_object"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/move_activity_object"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btn_dial_number"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/dial_number"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btn_move_activity_result"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/move_activity_result"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/activity_vertical_margin"
              android:gravity="center_horizontal"
              android:text="@string/activity_result"
              android:id="@+id/tv_activity_result"
              android:textStyle="bold"
              android:textSize="25sp"/>
</LinearLayout>