<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        tools:context=".ResultActivity">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/name" android:textStyle="bold"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/edt_name"
              android:hint="@string/name_hint" android:inputType="text"
              android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/job" android:textStyle="bold"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/edt_job"
              android:hint="@string/job_hint" android:inputType="text"
              android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button style="@style/Widget.AppCompat.Button.Colored" android:layout_width="match_parent"
            android:id="@+id/btn_send_data"
            android:layout_height="wrap_content"
            android:text="@string/data_set"/>

</LinearLayout>